examples/error.js
var Promise = require('../Promise.js');

new Promise(1);
// TypeError: 1 is not a function